# rust-ma-zscheme

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yaml  release.yaml
ma-zscheme/: Cargo.toml  Makefile
ma-zscheme-ipfs/: Cargo.toml  Makefile
ma-zscheme-ipfs/src/: lib.rs
ma-zscheme-yaml/: Cargo.toml  Makefile
ma-zscheme-yaml/src/: lib.rs
ma-zscheme/src/: dot.rs  dump.rs  eval.rs  host.rs  lib.rs  parser.rs  registry.rs  value.rs
src/: eval.rs  host.rs  lib.rs  parser.rs  registry.rs  value.rs
