[package]
name = "ma-zscheme-ipfs"
version = "0.3.1"
edition = "2021"
rust-version = "1.82"
description = "IPFS-backed DotRegistry for ma-zscheme"
license = "MIT"
repository = "https://github.com/bahner/rust-ma-zscheme"
keywords = ["scheme", "ipfs", "config", "actor"]

[dependencies]
ma-zscheme = { version = "0.3", path = "../ma-zscheme" }
