[package]
name = "ma-zscheme-yaml"
version = "0.3.0"
edition = "2021"
rust-version = "1.82"
description = "YAML/file-backed DotRegistry for ma-zscheme"
license = "MIT"
repository = "https://github.com/bahner/rust-ma-zscheme"
keywords = ["scheme", "config", "yaml", "actor"]

[dependencies]
anyhow = "1"
ma-zscheme = "0.2"
directories = "5"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"
